added addPrivateRoom & addPublicRoom
Separated the creation of public and private rooms
